//
// Created by Filipe on 20/12/2025.
//

#ifndef LETI_ESOFT_25_26_B1_USERARRIVALDTO_H
#define LETI_ESOFT_25_26_B1_USERARRIVALDTO_H

#pragma once

struct UserArrivalDTO {
    int facilityID;
    int sns_user_number;
};

#endif //LETI_ESOFT_25_26_B1_USERARRIVALDTO_H
